@@ -29,6 +29,8 @@ Bug Handling
 * Fixed bug where a SandboxInput configured with a `ticker_interval` would
   get stuck in an infinite loop on shutdown (#1705).
 
+* Fixed race condition in the BufferReader's queue file lookup code (#1639).
+
 0.10.0b1 (2015-08-07)
 =====================
 
